# Customer_Swagger_V1.yml
@@ -42,7 +42,7 @@ paths:
           type: string
         - in: header
           type: string
-          name: Transaction-Id 
+          name: Transaction-Id
         - in: body
           name: body
           description: Created customer object
@@ -53,47 +53,47 @@ paths:
         '201':
           description: successful operation
           schema:
-                $ref: '#/definitions/SuccessResponse'
+            $ref: '#/definitions/SuccessResponse'
         '400':
           description: bad request (error in request)
           schema:
-                $ref: '#/definitions/FailureResponse'
+            $ref: '#/definitions/FailureResponse'
         '401':
-           description: un authourized (invalid token)
-           schema:
-                $ref: '#/definitions/FailureResponse'
+          description: un authourized (invalid token)
+          schema:
+            $ref: '#/definitions/FailureResponse'
         '500':
-           description: internal server error (unknown error occured)
-           schema:
-                $ref: '#/definitions/FailureResponse'
+          description: internal server error (unknown error occured)
+          schema:
+            $ref: '#/definitions/FailureResponse'
 definitions:
   SuccessResponse:
     type: object
-    required: ["status","message"]
+    required: [ "status","message" ]
     properties:
       status:
         type: string
         default: "success"
-      message : 
+      message:
         type: string
     xml:
       name: SuccessResponse
   FailureResponse:
-     type : object
-     required: ["status","message"]
-     properties:
-       status:
+    type: object
+    required: [ "status","message" ]
+    properties:
+      status:
         type: string
         default: "failed"
-       message : 
+      message:
         type: string
-       errorType: 
+      errorType:
         type: string
-     xml:
+    xml:
       name: FailureResponse
   Address:
     type: object
-    required: ["addressLine1","postalCode"]
+    required: [ "addressLine1","postalCode" ]
     properties:
       addressLine1:
         type: string
@@ -107,7 +107,7 @@ definitions:
       name: address
   Customer:
     type: object
-    required: ["customerNumber","firstName","lastName","birthdate","country","countryCode","mobileNumber","email","customerStatus","address"]
+    required: [ "customerNumber","firstName","lastName","birthdate","country","countryCode","mobileNumber","email","customerStatus","address" ]
     properties:
       customerNumber:
         type: string
